[project]
name = "blockchain-exporter"
version = "0.0.15"
description = "Blockchain Prometheus metrics exporter (deprecated; superseded by daxchain-io/evm-tools)"
authors = [
    {name = "Scott K. Thomas, Jr."}
]
readme = "README.md"
requires-python = "^3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 7 - Inactive",
]
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "web3 (>=7.16.0,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[project.scripts]
"blockchain-exporter" = "blockchain_exporter.main:run"

[tool.poetry]
package-mode = false
packages = [{include = "blockchain_exporter", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx2 (>=2.4.0,<3.0.0)",
    "mdformat (>=0.7.20,<0.8.0)",
    "mypy (>=1.13.0,<2.0.0)",
    "pip-audit (>=2.7.0,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "ruff (>=0.14.14,<0.15.0)",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.legacy",
]
pythonpath = ["src"]
addopts = [
    "--cov=blockchain_exporter",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.11"
# Third-party packages (web3, etc.) ship without type stubs; focus on our code.
ignore_missing_imports = true
